--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "next": "13.0.1",
+    "mongodb": "^4.11.0",
+    "next": "^13.0.1",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.8.4"
