--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "mongodb": "^4.11.0",
+    "mongoose": "^6.7.2",
     "next": "^13.0.1",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   }
 }
