--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.1.3",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "next": "^13.0.1",
