--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,21 +22,11 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/components/*": [
-        "components/*"
-      ],
-      "@/lib/*": [
-        "lib/*"
-      ],
-      "@/middlewares/*": [
-        "middlewares/*"
-      ],
-      "@/hooks/*": [
-        "hooks/*"
-      ],
-      "@/db/*": [
-        "db/*"
-      ]
+      "@/components/*": ["components/*"],
+      "@/lib/*": ["lib/*"],
+      "@/middlewares/*": ["middlewares/*"],
+      "@/hooks/*": ["hooks/*"],
+      "@/db/*": ["db/*"]
     }
   },
   "include": [
