fix: User DB mongoDB로 변경

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 SECRET=mysecretofnextjsnextauth
 NEXTAUTH_URL=http://localhost:3000
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mongodb+srv://constell:1234@cluster0.56jgory.mongodb.net/project_cafe?retryWrites=true&w=majority"
