--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
+    "mongosh": "^1.6.0",
     "next": "^13.0.1",
     "next-auth": "^4.16.4",
     "next-connect": "^0.13.0",
