--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "swr": "^1.3.0",
     "typescript": "4.8.4"
   },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/next-auth": "^3.15.0",
