feat: next.js 백엔드 url 추가

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 SECRET=mysecretofnextjsnextauth
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://next-js-coffee.vercel.app
 DATABASE_URL="mongodb+srv://constell:1234@cluster0.56jgory.mongodb.net/project_cafe?retryWrites=true&w=majority"
