--- a/.env
+++ b/.env
@@ -7,3 +7,11 @@
 SECRET=mysecretofnextjsnextauth
 NEXTAUTH_URL=https://next-js-coffee.vercel.app
 DATABASE_URL="mongodb+srv://constell:1234@cluster0.56jgory.mongodb.net/project_cafe?retryWrites=true&w=majority"
+
+# firebase config
+API_KEY="AIzaSyDGZSTHmCJgtikytzY0qzI890q0hBgHbYc"
+AUTH_DOMAIN="weblingwelfare.firebaseapp.com"
+PROJECT_ID="weblingwelfare"
+STORAGE_BUCKET="weblingwelfare.appspot.com"
+MESSAGING_SENDER_ID="592772593151"
+APP_ID="1:592772593151:web:dad0884b108f68bf3fa3ca"
