--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.8",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
+    "firebase": "^9.17.2",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
     "mongosh": "^1.6.0",
