--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.11",
     "@prisma/client": "^4.6.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
@@ -28,9 +29,12 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.4",
     "react-redux": "^8.0.5",
+    "recoil": "^0.7.7",
     "swr": "^1.3.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "yup": "^1.0.2"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
