--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@hookform/resolvers": "^2.9.11",
     "@prisma/client": "^4.6.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "@types/antd": "^1.0.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "antd": "^5.3.0",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "firebase": "^9.17.2",
