--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd": "^5.3.0",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.7",
     "firebase": "^9.17.2",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.2",
